--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -16,17 +16,61 @@
     </header>
     <main>
       <div class="container">
-        <div class="form-group">
+        <!--<div class="form-group">
           <label for="text">Say something!</label>
           <input type="text" class="form-control" id="text" placeholder="">
           <p class="help-block">Help text here.</p>
+      </div>-->
+        <div class="row">
+            <div class="col-md-12">
+                <!--<button id="read" type="button" class="btn btn-default">
+                  Read
+              </button>-->
+                <button id="random-sound" type="button" class="btn btn-default">
+                  Random Sound
+                </button>
+            </div>
         </div>
-        <button id="read" type="button" class="btn btn-default">
-          Read
-        </button>
-        <button id="random-sound" type="button" class="btn btn-default">
-          Random Sound
-        </button>
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h3>Your Guess:</h3>
+                <div class="row">
+                    <div class="form-group col-md-4">
+                      <label for="hour">Hour:</label>
+                      <select class="form-control" id="hour" name="hour" placeholder="">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                          <option>5</option>
+                          <option>6</option>
+                          <option>7</option>
+                          <option>8</option>
+                          <option>9</option>
+                          <option>10</option>
+                          <option>11</option>
+                          <option>12</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-md-4">
+                      <label for="quarters">Quarters:</label>
+                      <select class="form-control" id="quarters" name="quarters" placeholder="">
+                          <option>00</option>
+                          <option>15</option>
+                          <option>30</option>
+                          <option>45</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="guess">&nbsp;</label>
+                        <button type="button" id="guess" class="form-control btn btn-success">
+                            Guess
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
       </div>
     </main>
     <footer>
