changed playback and created repeat button

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -29,6 +29,9 @@
                 <button id="random-sound" type="button" class="btn btn-default">
                   Random Sound
                 </button>
+                <button id="repeat" type="button" class="btn btn-default">
+                  Repeat
+                </button>
             </div>
         </div>
         <div class="row">
@@ -53,8 +56,8 @@
                       </select>
                     </div>
                     <div class="form-group col-md-4">
-                      <label for="quarters">Quarters:</label>
-                      <select class="form-control" id="quarters" name="quarters" placeholder="">
+                      <label for="quarters">Minutes:</label>
+                      <select class="form-control" id="minutes" name="minutes" placeholder="">
                           <option>00</option>
                           <option>15</option>
                           <option>30</option>
